--- a/spec/mkdocs.yml
+++ b/spec/mkdocs.yml
@@ -1,13 +1,13 @@
 # Project information
 site_name: AFM - Agent Flavored Markdown
-site_url: https://MaryamZi.github.io/agent-flavored-markdown/
+site_url: https://wso2.github.io/agent-flavored-markdown/
 site_author: wso2
 site_description: >-
   A specification for describing AI agents in a portable and interoperable way.
 
 # Repository
-repo_name: MaryamZi/agent-flavored-markdown
-repo_url: https://github.com/MaryamZi/agent-flavored-markdown
+repo_name: wso2/agent-flavored-markdown
+repo_url: https://github.com/wso2/agent-flavored-markdown
 
 # Copyright
 copyright: Copyright &copy; 2025 
