--- a/spec/mkdocs.yml
+++ b/spec/mkdocs.yml
@@ -90,16 +90,17 @@ extra:
   social:
     - icon: fontawesome/brands/github
       link: https://github.com/wso2/agent-flavored-markdown
+  # TODO: Enable analytics if needed
   # analytics:
   #   provider: google
   #   property: !ENV GOOGLE_ANALYTICS_KEY
-  consent:
-    title: Cookie consent
-    description: >- 
-      We use cookies to recognize your repeated visits and preferences, as well
-      as to measure the effectiveness of our documentation and whether users
-      find what they're searching for. With your consent, you're helping us to
-      make our documentation better.
+  # consent:
+  #   title: Cookie consent
+  #   description: >- 
+  #     We use cookies to recognize your repeated visits and preferences, as well
+  #     as to measure the effectiveness of our documentation and whether users
+  #     find what they're searching for. With your consent, you're helping us to
+  #     make our documentation better.
 
 # Navigation structure
 nav:
