--- a/spec/mkdocs.yml
+++ b/spec/mkdocs.yml
@@ -9,11 +9,9 @@ site_description: >-
 repo_name: wso2/agent-flavored-markdown
 repo_url: https://github.com/wso2/agent-flavored-markdown
 
-# Copyright
-copyright: Copyright &copy; 2025
-
 theme:
   name: material
+  custom_dir: overrides
   logo: assets/logo.svg
   favicon: assets/favicon.svg
   palette:
