Fix up the rest of the site

--- a/spec/mkdocs.yml
+++ b/spec/mkdocs.yml
@@ -103,10 +103,10 @@ extra:
 # Navigation structure
 nav:
   - Home: index.md
-  - Topics:
-      - Introduction: topics/index.md
-      - Why AFM?: topics/why-afm.md
-      - Connected Agents: topics/afm-connected-agent.md
+  - Why AFM?:
+      - Introduction: why-afm/index.md
+      - Philosophy: why-afm/philosophy.md
+      - Connected Agents: why-afm/afm-connected-agent.md
   - Specification: specification.md
   - Visualizer: visualizer/index.html
 
