Fix site name and visualizer description

--- a/spec/mkdocs.yml
+++ b/spec/mkdocs.yml
@@ -1,5 +1,5 @@
 # Project information
-site_name: AFM - Agent Flavored Markdown
+site_name: Agent Flavored Markdown
 site_url: https://wso2.github.io/agent-flavored-markdown/
 site_author: wso2
 site_description: >-
