--- a/spec/mkdocs.yml
+++ b/spec/mkdocs.yml
@@ -102,6 +102,10 @@ extra:
 nav:
   - Home: index.md
   - Specification: specification.md
+  - Examples:
+    - Friendly Assistant: examples/friendly_assistant.afm.md
+    - Math Tutor: examples/math_tutor.afm.md
+    - GitHub Pull Request Analyzer: examples/pull_request_analyzer.afm.md
   - Visualizer: visualizer/index.html
 
 # Include images in documentation
