--- a/spec/mkdocs.yml
+++ b/spec/mkdocs.yml
@@ -18,14 +18,14 @@ theme:
     - media: "(prefers-color-scheme: light)"
       scheme: default
       primary: black
-      accent: deep orange
+      accent: grey
       toggle:
         icon: material/brightness-7
         name: Switch to dark mode
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
       primary: black
-      accent: deep orange
+      accent: grey
       toggle:
         icon: material/brightness-4
         name: Switch to light mode
