--- a/spec/mkdocs.yml
+++ b/spec/mkdocs.yml
@@ -12,8 +12,8 @@ repo_url: https://github.com/wso2/agent-flavored-markdown
 theme:
   name: material
   custom_dir: overrides
-  logo: assets/logo.svg
-  favicon: assets/favicon.svg
+  logo: assets/afm_logo.svg
+  favicon: assets/afm_logo.svg
   palette:
     - media: "(prefers-color-scheme: light)"
       scheme: default
