--- a/spec/requirements.txt
+++ b/spec/requirements.txt
@@ -2,3 +2,4 @@ mkdocs>=1.5.0,<2.0.0
 mkdocs-material>=9.0.0,<10.0.0
 pymdown-extensions>=10.0,<11.0
 mkdocs-material-extensions>=1.0.0,<2.0.0
+mkdocs-redirects>=1.2.0,<2.0.0
